--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -35,5 +35,7 @@
   "reload": "重新加载",
   "api": "固定API",
   "api-answer": "安全的API答案",
-  "log-out-someone": "注销{{name}}"
+  "log-out-someone": "注销{{name}}",
+  "brand": "SCTG",
+  "Feedback Flow": "Feedback Flow"
 }
