--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -35,5 +35,7 @@
   "reload": "Recargar",
   "api": "API asegurada",
   "api-answer": "Respuesta de API asegurada",
-  "log-out-someone": "Iniciar sesión {{name}}"
+  "log-out-someone": "Iniciar sesión {{name}}",
+  "brand": "SCTG",
+  "Feedback Flow": "Feedback Flow"
 }
