--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -37,5 +37,11 @@
   "api-answer": "API API المضمون",
   "log-out-someone": "تسجيل الخروج {{name}}",
   "brand": "SCTG",
-  "Feedback Flow": "Feedback Flow"
+  "Feedback Flow": "Feedback Flow",
+  "Administration": "إدارة",
+  "add-a-new-user": "أضف مستخدمًا جديدًا",
+  "enter-the-user-name": "أدخل اسم المستخدم",
+  "please-enter-a-name": "الرجاء إدخال اسم",
+  "submit": "يُقدِّم",
+  "name": "اسم"
 }
