--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -37,5 +37,11 @@
   "api-answer": "Respuesta de API asegurada",
   "log-out-someone": "Iniciar sesión {{name}}",
   "brand": "SCTG",
-  "Feedback Flow": "Feedback Flow"
+  "Feedback Flow": "Feedback Flow",
+  "Administration": "Administración",
+  "add-a-new-user": "Agregar un nuevo usuario",
+  "enter-the-user-name": "Ingrese el nombre de usuario",
+  "please-enter-a-name": "Por favor ingrese un nombre",
+  "submit": "Entregar",
+  "name": "Nombre"
 }
