--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -43,5 +43,8 @@
   "please-enter-a-name": "Please enter a name",
   "enter-the-user-name": "Enter the user name",
   "submit": "Submit",
-  "name": "Name"
+  "name": "Name",
+  "please-enter-a-oauth-id": "Please enter an OAuth 2.0 id (sub)",
+  "oauth-id": "OAuth 2.0 id (sub)",
+  "enter-the-oauth-id": "Enter the OAuth 2.0 id (sub)"
 }
