wip: Add API response localization and update form submission handling in AddNewUser component

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -46,5 +46,6 @@
   "name": "اسم",
   "please-enter-a-oauth-id": "الرجاء إدخال معرف Oauth 2.0 (sub)",
   "oauth-id": "OAuth 2.0 ID (sub)",
-  "enter-the-oauth-id": "أدخل معرف Oauth 2.0 (sub)"
+  "enter-the-oauth-id": "أدخل معرف Oauth 2.0 (sub)",
+  "api-response": "استجابة API"
 }
