--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -46,5 +46,6 @@
   "name": "Nombre",
   "please-enter-a-oauth-id": "Ingrese una ID de OAuth 2.0 (sub)",
   "oauth-id": "OAuth 2.0 ID (sub)",
-  "enter-the-oauth-id": "Ingrese la ID de OAuth 2.0 (sub)"
+  "enter-the-oauth-id": "Ingrese la ID de OAuth 2.0 (sub)",
+  "api-response": "Respuesta de la API"
 }
