--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -47,5 +47,10 @@
   "please-enter-a-oauth-id": "Please enter an OAuth 2.0 id (sub)",
   "oauth-id": "OAuth 2.0 id (sub)",
   "enter-the-oauth-id": "Enter the OAuth 2.0 id (sub)",
-  "api-response": "API Response"
+  "api-response": "API Response",
+  "user": "User",
+  "token": "Token",
+  "expiration": "Expiration",
+  "permissions": "Permissions",
+  "no-permissions": "No permissions"
 }
