--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -47,5 +47,10 @@
   "please-enter-a-oauth-id": "אנא הזן מזהה OAuth 2.0 (sub)",
   "oauth-id": "OAuth 2.0 ID (sub)",
   "enter-the-oauth-id": "הזן את מזהה OAuth 2.0 (Sub)",
-  "api-response": "תגובת API"
+  "api-response": "תגובת API",
+  "token": "אֲסִימוֹן",
+  "user": "מִשׁתַמֵשׁ",
+  "permissions": "הרשאות",
+  "expiration": "פְּקִיעָה",
+  "no-permissions": "אין הרשאות"
 }
