--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -52,5 +52,7 @@
   "user": "מִשׁתַמֵשׁ",
   "permissions": "הרשאות",
   "expiration": "פְּקִיעָה",
-  "no-permissions": "אין הרשאות"
+  "no-permissions": "אין הרשאות",
+  "manage-database": "נהל את בסיס הנתונים",
+  "backup-database": "גבה את בסיס הנתונים"
 }
