--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -52,5 +52,7 @@
   "user": "用户",
   "permissions": "权限",
   "expiration": "到期",
-  "no-permissions": "无许可"
+  "no-permissions": "无许可",
+  "manage-database": "管理数据库",
+  "backup-database": "备份数据库"
 }
