feat: add export and download backup options to database localization files

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -54,5 +54,7 @@
   "expiration": "انتهاء",
   "no-permissions": "لا أذونات",
   "manage-database": "إدارة قاعدة البيانات",
-  "backup-database": "النسخ الاحتياطي لقاعدة البيانات"
+  "backup-database": "النسخ الاحتياطي لقاعدة البيانات",
+  "export-database": "قاعدة بيانات التصدير",
+  "download-backup": "تنزيل النسخ الاحتياطي"
 }
