--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -54,5 +54,7 @@
   "expiration": "Vencimiento",
   "no-permissions": "Sin permisos",
   "manage-database": "Administrar la base de datos",
-  "backup-database": "Hacer una copia de seguridad de la base de datos"
+  "backup-database": "Hacer una copia de seguridad de la base de datos",
+  "export-database": "Base de datos de exportación",
+  "download-backup": "Descargar copia de seguridad"
 }
