--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -55,6 +55,6 @@
   "no-permissions": "Aucune autorisation",
   "manage-database": "Gérer la base de données",
   "backup-database": "Sauvegarder la base de données",
-  "export-database": "Base de données d'exportation",
+  "export-database": "Exportation de la base de données",
   "download-backup": "Télécharger la sauvegarde"
 }
