--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -56,5 +56,8 @@
   "manage-database": "נהל את בסיס הנתונים",
   "backup-database": "גבה את בסיס הנתונים",
   "export-database": "ייצוא מסד נתונים",
-  "download-backup": "הורד גיבוי"
+  "download-backup": "הורד גיבוי",
+  "browse": "לְדַפדֵף",
+  "drop-your-image-here": "זרוק את התמונה שלך כאן",
+  "reset": "אִתחוּל"
 }
