--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -56,5 +56,8 @@
   "manage-database": "管理数据库",
   "backup-database": "备份数据库",
   "export-database": "导出数据库",
-  "download-backup": "下载备份"
+  "download-backup": "下载备份",
+  "browse": "浏览",
+  "drop-your-image-here": "放在这里",
+  "reset": "重置"
 }
