--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -59,5 +59,9 @@
   "download-backup": "Descargar copia de seguridad",
   "browse": "Navegar",
   "drop-your-image-here": "Deja tu imagen aquí",
-  "reset": "Reiniciar"
+  "reset": "Reiniciar",
+  "paste-from-clipboard": "Pegar del portapapeles",
+  "no-acceptable-content-found-in-clipboard": "No se encuentra el contenido aceptable ({{aceptableTypes}}) que se encuentra en el portapapeles",
+  "clipboard-is-empty": "El portapapeles está vacío",
+  "failed-to-paste-from-clipboard": "No se pudo pegar desde el portapapeles"
 }
