--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -59,5 +59,9 @@
   "download-backup": "下载备份",
   "browse": "浏览",
   "drop-your-image-here": "放在这里",
-  "reset": "重置"
+  "reset": "重置",
+  "paste-from-clipboard": "从剪贴板粘贴",
+  "no-acceptable-content-found-in-clipboard": "在剪贴板中没有可接受的（{acceptableTypes}}）内容",
+  "clipboard-is-empty": "剪贴板是空的",
+  "failed-to-paste-from-clipboard": "无法从剪贴板粘贴"
 }
