--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -64,5 +64,7 @@
   "no-acceptable-content-found-in-clipboard": "No acceptable ({{acceptableTypes}}) content found in clipboard",
   "clipboard-is-empty": "Clipboard is empty",
   "clipboard-api-not-supported-in-this-browser": "Clipboard API not supported in this browser",
-  "failed-to-paste-from-clipboard": "Failed to paste from clipboard"
+  "failed-to-paste-from-clipboard": "Failed to paste from clipboard",
+  "add": "Add",
+  "paste": "Paste"
 }
