--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -65,5 +65,7 @@
   "clipboard-is-empty": "الحافظة فارغة",
   "failed-to-paste-from-clipboard": "فشل لصق من الحافظة",
   "add": "يضيف",
-  "paste": "لصق"
+  "paste": "لصق",
+  "Image Preview": "معاينة الصورة",
+  "Download Converted Images": "تنزيل الصور المحولة"
 }
