--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -68,5 +68,6 @@
   "add": "Add",
   "paste": "Paste",
   "Image Preview": "Image Preview",
-  "Download Converted Images": "Download Converted Images"
+  "download-converted-images_one": "Download Converted Image",
+  "download-converted-images_other": "Download Converted Images"
 }
