--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -67,5 +67,8 @@
   "add": "添加",
   "paste": "粘贴",
   "Image Preview": "图像预览",
-  "Download Converted Images": "下载转换的图像"
+  "Download Converted Images": "下载转换的图像",
+  "clipboard-api-not-supported-in-this-browser": "此浏览器中不支持剪贴板API",
+  "download-converted-images_one": "下载转换的图像",
+  "download-converted-images_other": "下载转换的图像"
 }
