--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -70,5 +70,7 @@
   "Download Converted Images": "הורד תמונות שהוסבו",
   "clipboard-api-not-supported-in-this-browser": "ממשק API של הלוח לא נתמך בדפדפן זה",
   "download-converted-images_one": "הורד תמונה המרה",
-  "download-converted-images_other": "הורד תמונות שהוסבו"
+  "download-converted-images_other": "הורד תמונות שהוסבו",
+  "export-database-description": "השתמש בכלי זה כדי לייצא את תוכן מסד הנתונים.",
+  "restore-database-description": "השתמש בכלי זה כדי לשחזר את מסד הנתונים"
 }
