--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -70,5 +70,7 @@
   "Download Converted Images": "تنزيل الصور المحولة",
   "clipboard-api-not-supported-in-this-browser": "واجهة برمجة تطبيقات الحافظة غير مدعومة في هذا المتصفح",
   "download-converted-images_one": "تنزيل الصورة المحولة",
-  "download-converted-images_other": "تنزيل الصور المحولة"
+  "download-converted-images_other": "تنزيل الصور المحولة",
+  "export-database-description": "استخدم هذه الأداة لتصدير محتوى قاعدة البيانات.",
+  "restore-database-description": "استخدم هذه الأداة لاستعادة قاعدة البيانات"
 }
