--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -72,5 +72,6 @@
   "download-converted-images_one": "הורד תמונה המרה",
   "download-converted-images_other": "הורד תמונות שהוסבו",
   "export-database-description": "השתמש בכלי זה כדי לייצא את תוכן מסד הנתונים.",
-  "restore-database-description": "השתמש בכלי זה כדי לשחזר את מסד הנתונים"
+  "restore-database-description": "השתמש בכלי זה כדי לשחזר את מסד הנתונים",
+  "restore-database-success": "בסיס הנתונים ששוחזר"
 }
