--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -73,5 +73,14 @@
   "download-converted-images_other": "Télécharger des images converties",
   "export-database-description": "Utilisez cet outil pour exporter le contenu de la base de données.",
   "restore-database-description": "Utilisez cet outil pour restaurer la base de données",
-  "restore-database-success": "La base de données telle qu'elle a été restaurée"
+  "restore-database-success": "La base de données a été restaurée",
+  "cancel": "Annuler",
+  "confirm-restore": "Confirmer la restauration",
+  "confirm-restore-warning": "Êtes-vous sûr de restaurer la base de données?",
+  "error-file-too-large": "Erreur: fichier trop grand",
+  "error-not-json-file": "Erreur: pas un fichier JSON",
+  "error-reading-file": "Fichier de lecture d'erreur",
+  "error-unknown": "Erreur inconnue",
+  "restore-database": "Restaurer la base de données",
+  "restore-the-database": "Restaurer la base de données"
 }
